--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <h1>新規内容作成ページ</h1>
+
+    <%= form_with(model: @task, local: true) do |f| %>
+    <%= f.label :content, 'メッセージ' %>
+    <%= f.text_field :content %>
+
+    <%= f.submit '投稿' %>
+  <% end %>
+
+  <%= link_to '一覧に戻る', tasks_path %>
+  
   </body>
 </html>
