--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,7 @@
     
   <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.content %></li>
+    <li><%= link_to task.id, task %> : <%= task.content %><%= task.status %></li>
   <% end %>
   </ul>
   <%= link_to '新規内容の投稿', new_task_path %>
