--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,20 +1,19 @@
 <ul class="list-unstyled">
-  <% tasks.each do |tasks| %>
+  <% tasks.each do |task| %>
   <li class="media mb-3">
       <div class="media-body">
         <div>
-          <%= link_to task.user.name, user_path(task.user) %> <span class="text-muted">posted at <%= task.created_at %></span>
+           <%= link_to task.user.name, user_path(task.user) %> <span class="text-muted">posted at <%= task.created_at %></span>
         </div>
         <div>
-          <p><%= task.content %></p>
+          <p>コンテント：<%= task.content %><br>ステータス：<%= task.status%></p>
         </div>
         <div>
-          <% if current_user == micropost.user %>
-            <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
+          <% if current_user == task.user %>
+            <%= link_to "削除する", task, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
           <% end %>
         </div>
       </div>
     </li>
   <% end %>
-  <%= paginate task %>
 </ul>
