--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -7,7 +7,7 @@
         </div>
         <div>
           <% if current_user == task.user %>
-            <%= link_to "削除する", task, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
+            <%= link_to "削除する", task, method: :delete, data: { confirm: "You sure?" }, class: 'btn' %>
           <% end %>
         </div>
   <% end %>
