--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,6 +5,6 @@
 <% else %>
     <div class="text-center">
       <h1>タスク管理ツール</h1>
-      <%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
+      <%= link_to 'ログイン', login_path %>
     </div>
 <% end %>
