--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,5 +17,5 @@
       <%=f.label :password_confirmation, 'パスワード再入力' %>
       <%=f.password_field :password_confirmation, class: "form-control" %> 
     </div>
-    <%=f.submit 'アカウント作成', class: "btn btn-primary btn-block" %> 
+    <%=f.submit 'アカウント作成' %> 
   <% end %>
