--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -4,7 +4,7 @@
           <p>コンテント：<%= task.content %><br>ステータス：<%= task.status %></p>
         </div>
         <div>
-          <% if current_user == task.user %>
+          <% if current_user == @task.user %>
             <%= link_to "削除する", task, method: :delete, data: { confirm: "You sure?" } %>
           <% end %>
         </div>
