--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,11 +1,11 @@
-  <% tasks.each do |task| %>
+<% tasks.each do |task| %>
         <div><%= link_to task.user.name, task_path(task.user) %> posted at <%= task.created_at %></div>
         <div>
           <p>コンテント：<%= task.content %><br>ステータス：<%= task.status %></p>
         </div>
         <div>
-          <% if current_user == @task.user %>
+          <% if current_user == task.user %>
             <%= link_to "削除する", task, method: :delete, data: { confirm: "You sure?" } %>
           <% end %>
         </div>
-  <% end %>
+<% end %>
