--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,8 @@
-
-
+<h1>タスクアプリ</h1>
+    
+  <ul>
+    <% tasks.each do |task| %>
+      <li><%= link_to task.id, task %><br><%= task.content %><%= task.status %></li>
+    <% end %>
+  </ul>
+  <%= link_to '新規内容の投稿', new_task_path %>
