--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,16 @@
 <% if logged_in? %>
-  <%= render 'tasks/tasks', tasks: @tasks %>
+  <% @tasks.each do |task| %>
+        <div><%= task.user.name %> posted at <%= task.created_at %></div>
+        <div>
+          <p>コンテント：<%= task.content %><br>ステータス：<%= task.status %></p>
+        </div>
+        <div>
+          <% if current_user == task.user %>
+            <%= link_to "削除する", task, method: :delete, data: { confirm: "本当に削除しますか？" } %>
+          <% end %>
+        </div>
+  <% end %>
+
   <%= link_to "新規登録ページ", new_task_path %>
   <%= link_to 'ログアウト', logout_path, method: :delete, data: { confirm: "ログアウトしますか？" } %>
 <% else %>
