--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,7 @@
       <% end %>
      <% end %>
    
-  <%= link_to "新規登録ページ", new_task_path %>
+  <%= link_to "新規タスク作成", new_task_path %>
   <%= link_to 'ログアウト', logout_path, method: :delete, data: { confirm: "ログアウトしますか？" } %>
 <% else %>
       <h1>タスク管理ツール</h1>
